# detective-board

./: Cargo.toml  README.md  board_schema.surrealql
chats/: controllers.md
schemas/: board_schema.surrealql
src/: main.rs
src/app_settings/: env.rs
src/controllers/: event_controller.rs  evidence_controller.rs  location_controller.rs  mod.rs  organization_controller.rs  person_controller.rs
src/db/: config.rs  event_db.rs  evidence_db.rs  location_db.rs  mod.rs  organization_db.rs  person_db.rs
src/db_schemas/: board_schema.surql  board_schema.surrealql
src/error/: event_error.rs  evidence_error.rs  location_error.rs  mod.rs  organization_error.rs  person_error.rs
src/models/: at_edge.rs  event_model.rs  evidence_model.rs  found_at_edge.rs  involved_in_edge.rs  linked_to_edge.rs  location_model.rs  member_of_edge.rs  mod.rs  organization_model.rs  person_model.rs  related_evidence_edge.rs  related_to_edge.rs
src/utils/: crud.rs
