[package]
name = "detective-board"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
async-trait = "0.1.86"
chrono = "0.4.39"
derive_more = { version = "2.0.1", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
geo-types = "0.7.15"
handlebars = "6.3.1"
lazy_static = "1.5.0"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
surrealdb = "2.2.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
